# 2DAvgFace

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  environment.yml  pyproject.toml
apps/: __init__.py  config.py
apps/cli/: run.py
apps/web/: app.py
apps/web/static/: script.js  style.css
apps/web/templates/: index.html
data/examples/faces_example/: README.md
data/faces/: README.md
docs/: CLI.md  INSTALL.md  TROUBLESHOOTING.md  WEB.md
models/: manifest.json
scripts/: run_project_checks.sh  run_with_env.sh  verify_setup.py
src/: average_best.py  face_parsing_model.py
src/utils/: __init__.py  alignment.py  blending.py  color.py  compat.py  enhancement.py  face_restoration.py  masks.py  model_download.py  quality.py  super_resolution.py  warp.py
